Fix alignment of text in MenuButton.

--- a/src/org/jrydberg/ui/client/resources/MenuButton.css
+++ b/src/org/jrydberg/ui/client/resources/MenuButton.css
@@ -7,6 +7,12 @@
 	padding: 0;
 }
 
+.button img {
+    margin: 0 0 -3px 0 !important;
+    padding: 0;
+    border: none;	
+}
+
 .button:focus { 
     outline: none; 
 }
